styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: "Raleway", "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

body {
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5;
  color: #212529;
  text-align: left;
}

/* Scrollbar */
body::-webkit-scrollbar {
  width: 0.3em;
}

body::-webkit-scrollbar-track {
  box-shadow: none !important;
  background-color: var(--color-primary-900);
}

body::-webkit-scrollbar-thumb {
  background-color: var(--color-accent);
  border-radius: 25px;
}

:root {
    font-size: 14px;
    --color-button-text: #fff;
    --color-primary-100: #dee3ea;
    --color-primary-200: #b2bdcd;
    --color-primary-300: #5d7290;
    --color-primary-600: #323d4d;
    --color-primary-700: #242c37;
    --color-primary-800: #151a21;
    --color-primary-900: #0b0e11;
    --color-secondary-washed-out: #879eed;
    --color-secondary: #5575e7;
    --color-accent-glow: rgba(253,77,77,0.3);
    --color-accent: #fd4d4d;
    --color-accent-hover: #fd6868;
    --color-accent-disabled: #f5bfbf;
}

* {
  box-sizing: border-box;
}

p {
  margin-bottom: 1rem;
  margin-top: 0;
}

.code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.buttons {
  gap: 10px;
  display: flex;
}

aside {
  display: flex;
  flex-direction: column;

  height: max-content;

  top: 30px;
  position: sticky;
  padding: 0 10% 10% 10%;
}

h1, h2, h3, h4, h5, h6, h7 {
  color: var(--color-primary-100);
}

span.title, p.title {
  font-weight: bold;
  font-size: 1.2rem;
  color: var(--color-primary-100);
}

span.subtitle, p.subtitle {
  color: var(--color-primary-300);
}

